Sign In page basic design

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,9 +1,12 @@
 /*primary or default theme*/
 
+$defaultSignInBackgroundColor: rgb(82, 86, 89);
+$defaultSignInContainerBoxShadowColor: #1b1b1b;
 $defaultAppBackgroundColor: #002F87;
+$defaultAppSecondaryBackgroundColor: white;
 $defaultAppTextColor: white;
 $defaultAppBodyBackgroundColor: white;
 
 /* button */
-$defaultButtonColor: red;
+$defaultButtonColor: #002366;
 $defaultButtonLabelColor: white;
