--- a/src/components/AppButton.scss
+++ b/src/components/AppButton.scss
@@ -4,5 +4,8 @@
     &-default{
         background-color: $defaultButtonColor;
         color: $defaultButtonLabelColor;
+        width: 120px;
+        border-radius: 50px;
+        border:unset
     }
 }
