--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -10,3 +10,7 @@ $defaultAppBodyBackgroundColor: white;
 /* button */
 $defaultButtonColor: #002366;
 $defaultButtonLabelColor: white;
+
+/* input */
+$defaultInputBackgroundColor: #f0f0f0;
+$defaultInputBorderColor: #002F87;
