Sign up UI updates

--- a/src/components/SignInContainer.scss
+++ b/src/components/SignInContainer.scss
@@ -51,6 +51,7 @@
                 &-img{
                     margin: auto;
                     width: 250px;
+                    height: 200px;
                     animation: signInContentAnimation 0.5s;
                 }
             }
@@ -86,6 +87,7 @@
                 &-img{
                     margin: auto;
                     width: 180px;
+                    height: 185px;
                     animation: signUpContentAnimation 0.5s;
                 }
             }
