--- a/src/components/AppNavbar.scss
+++ b/src/components/AppNavbar.scss
@@ -16,6 +16,9 @@
                     width: 50px;
                     margin-right: 5px;
                 }
+            }
+            &-settings{
+                margin-left: auto;
             }    
         }
     }
