--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -7,6 +7,14 @@ $defaultAppSecondaryBackgroundColor: white;
 $defaultAppTextColor: white;
 $defaultAppBodyBackgroundColor: white;
 
+/*Sidebar*/
+$sidebarBackgroundColor:#002F87;
+$sidebarTextColor: white;
+$sidebarItemHoverBackgroundColor:#01266b;
+$sidebarSelectedItemBackgroundColor: #81D8D0;
+$sidebarSelectedItemTextColor: black;
+
+
 /* button */
 $defaultButtonColor: #002366;
 $defaultButtonLabelColor: white;
