--- a/src/components/AppBody.scss
+++ b/src/components/AppBody.scss
@@ -2,9 +2,17 @@
 
 .app-body{
     &-default{
-        display: flex;
         background-color: $defaultAppBodyBackgroundColor;
-        height: 100vh;
+        overflow-y: auto;
         width: 100%;
+        &__design{
+            background-color: $defaultAppBackgroundColor;
+            height: 100px;
+        }
+        &__content{
+            display: flex;
+            min-height: 100vh;
+            margin-top: -100px;
+        }
     }
 }
