--- a/src/components/AppBodySidebar.scss
+++ b/src/components/AppBodySidebar.scss
@@ -1,8 +1,27 @@
+@import '../sass/colors';
+
 .app-sidebar{
     &-default{
-        width: 25%;
-        background-color: red;
-        margin-top: -10%;
-        border-radius: 25px 25px 0px 0px;
+        width: 250px;
+        background-color: $sidebarBackgroundColor;
+        color: $sidebarTextColor;
+        text-align: center;
+        font-size: 21px;
+        font-weight: 500;
+        //border-radius: 25px 25px 0px 0px;
+        &-selected{
+            padding: 10px;
+            border-radius: 25px;
+            background-color: $sidebarSelectedItemBackgroundColor;
+            color: $sidebarSelectedItemTextColor;
+            cursor: pointer;
+        }
+        &-unselected{
+            padding: 10px;
+            cursor: pointer;
+            &:hover{
+                background-color: $sidebarItemHoverBackgroundColor;
+            }
+        }
     }
 }
