--- a/src/components/AppNavbar.scss
+++ b/src/components/AppNavbar.scss
@@ -2,10 +2,10 @@
 
 .app-navbar{
     &-default{
+        position: sticky;
         &__container{
             margin: unset;
             min-width: 100%;
-            padding-bottom: 10%;
             &-brand{
                 display: flex;
                 color: $defaultAppTextColor !important;
