--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import './sass/colors';
 body{
   width: 100%;
-  height: 100vh;
+  overflow: hidden;
   background-color: $defaultAppBackgroundColor;
   color: $defaultAppTextColor;
 }
