--- a/src/components/AppBodySidebar.scss
+++ b/src/components/AppBodySidebar.scss
@@ -23,5 +23,12 @@
                 background-color: $sidebarItemHoverBackgroundColor;
             }
         }
+        &-link{
+            text-decoration: none;
+            color: inherit;
+            &:hover{
+                color: inherit;
+            }
+        }
     }
 }
