Sidebar subcontent Ui design

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -11,7 +11,8 @@ $defaultAppBodyBackgroundColor: white;
 $sidebarBackgroundColor:#002F87;
 $sidebarTextColor: white;
 $sidebarItemHoverBackgroundColor:#01266b;
-$sidebarSelectedItemBackgroundColor: #81D8D0;
+$sidebarSelectedItemBackgroundColor: #6dec6d;
+$sidebarSelectedItemContentBackgroundColor: #9afdc7;
 $sidebarSelectedItemTextColor: black;
 
 
