--- a/src/components/AppBodySidebar.scss
+++ b/src/components/AppBodySidebar.scss
@@ -5,19 +5,18 @@
         width: 250px;
         background-color: $sidebarBackgroundColor;
         color: $sidebarTextColor;
-        text-align: center;
         font-size: 21px;
         font-weight: 500;
         //border-radius: 25px 25px 0px 0px;
         &-selected{
-            padding: 10px;
+            padding: 10px 20px;
             border-radius: 25px;
             background-color: $sidebarSelectedItemBackgroundColor;
             color: $sidebarSelectedItemTextColor;
             cursor: pointer;
         }
         &-unselected{
-            padding: 10px;
+            padding: 10px 20px;
             cursor: pointer;
             &:hover{
                 background-color: $sidebarItemHoverBackgroundColor;
@@ -28,6 +27,47 @@
             color: inherit;
             &:hover{
                 color: inherit;
+            }
+        }
+        &-container-subcontent{
+            padding: 10px 0px;
+        }
+        &-content{
+            &-selected{
+                background-color: $sidebarSelectedItemContentBackgroundColor;
+                color: $sidebarSelectedItemTextColor;
+                font-weight: normal;
+                font-size: 18px;
+                padding: 5px 0px 5px 30px;
+                cursor: pointer;
+            }
+            &-unselected{
+                font-weight: normal;
+                font-size: 18px;
+                padding: 5px 0px 5px 30px;
+                cursor: pointer;
+                &:hover{
+                    background-color: $sidebarItemHoverBackgroundColor;
+                }
+            }
+        }
+        &-subcontent{
+            &-selected{
+                background-color: $sidebarSelectedItemContentBackgroundColor;
+                color: $sidebarSelectedItemTextColor;
+                font-weight: normal;
+                font-size: 16px;
+                padding: 5px 0px 5px 60px;
+                cursor: pointer;
+            }
+            &-unselected{
+                font-weight: normal;
+                font-size: 16px;
+                padding: 5px 0px 5px 60px;
+                cursor: pointer;
+                &:hover{
+                    background-color: $sidebarItemHoverBackgroundColor;
+                }
             }
         }
     }
