Sidebar Icons and fixes

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -23,3 +23,10 @@ $defaultButtonLabelColor: white;
 /* input */
 $defaultInputBackgroundColor: #f0f0f0;
 $defaultInputBorderColor: #002F87;
+
+/* card */
+$cardBoxShadowColor: #1b1b1b;
+$cardPrimaryBackgroundColor: #48b4e0;
+$cardPrimaryTextColor: white;
+$cardSecondaryBackgroundColor: white;
+$cardSecondaryTextColor: black;
