--- a/src/components/AppBodySidebar.scss
+++ b/src/components/AppBodySidebar.scss
@@ -8,6 +8,11 @@
         font-size: 21px;
         font-weight: 500;
         //border-radius: 25px 25px 0px 0px;
+        &-icon{
+            height: 21px;
+            margin-right: 5px;
+            margin-bottom: 6px;
+        }
         &-selected{
             padding: 10px 20px;
             border-radius: 25px;
