--- a/src/views/Dashboard.scss
+++ b/src/views/Dashboard.scss
@@ -4,6 +4,10 @@
     width:100%;
     height: 100vh;
     overflow: hidden;
+
+    &__offcanvas{
+      color: black;
+    }
     ::-webkit-scrollbar {
         width: 8px;
       }
