--- a/src/components/AppCard.scss
+++ b/src/components/AppCard.scss
@@ -22,6 +22,7 @@
             display: flex;
             &-section{
                 display: flex;
+                cursor:not-allowed;
             }
             &-type{
                 width: 50%;
@@ -31,7 +32,9 @@
                     width: 40px;
                 }
                 &-title{
-                    font-size: 21px;
+                    font-size: 24px;
+                    margin-top: 15px;
+                    line-height: 26px;
                 }
             }
             &-progress{
@@ -63,6 +66,7 @@
             display: flex;
             &-section{
                 display: flex;
+                cursor:pointer;
             }
             &-type{
                 width: 50%;
@@ -72,7 +76,9 @@
                     width: 40px;
                 }
                 &-title{
-                    font-size: 23px;
+                    font-size: 24px;
+                    margin-top: 15px;
+                    line-height: 26px;
                 }
             }
             &-progress{
