--- a/src/components/AppBodySidebar.scss
+++ b/src/components/AppBodySidebar.scss
@@ -76,5 +76,9 @@
                 }
             }
         }
+        .disabled{
+            cursor: not-allowed;
+            opacity: 0.5;
+        }
     }
 }
