--- a/src/views/Subject.scss
+++ b/src/views/Subject.scss
@@ -22,6 +22,11 @@
         }
         &__content{
             width: 100%;
+            display: flex;
+            justify-content: center;
+            &-button{
+                width: 500px !important;
+            }
         }
     }
 }
