notification and profile fixing

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -15,6 +15,9 @@ $sidebarSelectedItemBackgroundColor: #6dec6d;
 $sidebarSelectedItemContentBackgroundColor: #9afdc7;
 $sidebarSelectedItemTextColor: black;
 
+/*off canvas*/
+$offcanvasTextColor: black;
+
 
 /* button */
 $defaultButtonColor: #002366;
