--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -1,7 +1,9 @@
 .home{
     &-default{
+        width:100%;
         &__cards{
             display: flex;
+            justify-content: space-evenly;
         }
     }
 }
