--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -18,6 +18,8 @@ $sidebarSelectedItemTextColor: black;
 /*off canvas*/
 $offcanvasTextColor: black;
 
+/*Body Content*/
+$bodyContentTextColor: black;
 
 /* button */
 $defaultButtonColor: #002366;
