--- a/src/views/SignIn.scss
+++ b/src/views/SignIn.scss
@@ -24,5 +24,13 @@
             height: 35px;
             font-size: 14px;
         }
+        &-error{
+            color: red;
+            font-size: 14px;
+            text-align: left;
+            margin-bottom: 10px;
+            margin-top: -10px;
+            margin-left: 10px;
+        }
     }
 }
